Configure Vercel for Git LFS support and fix video background deployment
- Add Git LFS build command to vercel.json
- Copy video files to website/videos directory
- Update website/index.html with correct video paths
- Add LFS tracking for website/videos/*.mp4
- Configure video caching headers in Vercel
- Add install-lfs-files.sh script for manual LFS setup if needed

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,17 @@
 {
+  "buildCommand": "git lfs install && git lfs pull",
+  "outputDirectory": "website",
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/videos/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
